# utils

./: CMakeLists.txt  README.md  conanfile.py
cmake/: platform.cmake
common/include/common/: Optional.h  Utility.h  Value.h
common/src/: Main.cpp
include/utils/: Optional.h
include/utils/threading/: ActiveWorker.h  Threadpool.h
include/utils/utility/: Utility.h
scheduler/include/scheduler/: Scheduler.h
scheduler/src/: Scheduler.cpp  SchedulerLinux.cpp  SchedulerWindows.cpp
test/: CMakeLists.txt  Main.cpp  test_optional.cpp  test_scheduler.cpp  test_thread.cpp  test_threading.cpp
thread/include/thread/: ActiveWorker.h  Threadpool.h
